<?xml version="1.0"?>
<package format="3">
  <name>fastbot_nav2</name>
  <version>0.1.0</version>
  <description>Nav2</description>
  <maintainer email="frankleroyvan@gmail.com">Frank</maintainer>
  <license>Apache-2.0</license>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <exec_depend>nav2_bringup</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>